# glfw_starter

./: .gitignore  CMakeLists.txt  README.md
cmake/: shared_settings.cmake
glfw_starter/: CMakeLists.txt  glfw_app.cpp  glfw_app.h  main.cpp  shader.fs  shader.vs  shader_program.cpp  shader_program.h
